# Hits-ml-module1

./: .gitignore  README.md  logger.py  model.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: results.csv
model/: catboost_model.cbm  ohe.pkl  optuna_params.pkl
notebooks/: demo.ipynb  notebook_best_score.ipynb  submission.csv  titanic.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
