[project]
name = "hits-ml-module1"
version = "0.1.0"
description = ""
authors = [
    {name = "Konstantin Alimov",email = "kostya.alimov.96@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "clearml (>=1.18.0,<2.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "catboost (>=1.2.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
